# physfs_lua_sample

./: CMakeLists.txt  README.md  build.bat  run.bat
assets/: main.lua
src/: convert_assets.c  load_assets.c  main.c
